# inferno3-database

./: .env  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  items.txt  pyproject.toml
.github/workflows/: pipeline.yml
inferno3-frontend/: .env  Dockerfile  next.config.js  package.json  pnpm-lock.yaml
inferno3-frontend/app/: globals.css  layout.module.css  layout.tsx  page.tsx  useItems.ts
inferno3-frontend/app/areas/: page.tsx
inferno3-frontend/app/components/: InfernaisTable.tsx  ItemsTable.tsx  Logo.tsx  ResponsiveAppBar.tsx  Sidebar.tsx  TopNavbar.tsx  styles.module.css
inferno3-frontend/app/components/shared/: Footer.tsx  Header.tsx
inferno3-frontend/app/infernais/: page.tsx
inferno3-frontend/app/items/: page.tsx
inferno3-frontend/app/lib/: api.ts  config.ts
inferno3-frontend/app/types/: item.ts
inferno3_database/: __init__.py  application.py  config.yaml  item.py  item_parser.py  main.py  text_parser.py
inferno3_database/adapters/db/: database.py
inferno3_database/adapters/entrypoints/api/: __init__.py
inferno3_database/adapters/entrypoints/api/v1/: areas_routes.py  health_routes.py  items_routes.py
inferno3_database/domain/ports/schemas/: items.py  objectid.py
inferno3_database/test/: test_item_parser.py  test_text_parser.py
scripts/: __init__.py
tests/: test_item_parser.py
