[tool.poetry]
name = "inferno3-database"
version = "0.1.0"
description = ""
authors = ["Bruno Mouta <brumouta@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
web_server = "scripts:web_server"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = "^0.23.2"
pyyaml = "^6.0.1"
pymongo = "^4.6.0"
requests = "^2.31.0"
motor = "^3.3.1"
pyaml-env = "^1.2.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
